# deepcore-dps

./: .clang-tidy  .gitignore  CMakeLists.txt  justfile  requirements.txt
libdeepcore/: assault_rifle.h  main.cpp
libdeepcore/weapons/: deepcore_gk2.cpp  deepcore_gk2.h  utils.h  weapon.cpp  weapon.h
src/weapons/: deepcore_gk2.cpp  deepcore_gk2.h  weapon.cpp  weapon.h
